--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -1,5 +1,6 @@
-<hr>
+<app-event-header *ngIf="event" [event]="event"></app-event-header>
 
+<hr>
 
 <h1 translate="reservation-page-complete.your-tickets"></h1>
 
