--- a/src/app/reservation/offline-payment/offline-payment.component.html
+++ b/src/app/reservation/offline-payment/offline-payment.component.html
@@ -1,3 +1,15 @@
-<p>
-  offline works!
-</p>
+<div class="wMarginBottom wMarginTop center-block" *ngIf="event && reservationInfo">
+  <h4 [innerHtml]="'reservation-page-waiting.required-steps'|translate"></h4>
+  <ol>
+      <li *ngIf="event.bankAccountOwner.length > 0">
+          <p class="no-margin-bottom" [innerHtml]="'reservation-page-waiting.required-steps.1.with-bank-account-owner' | translate: {'0': event.currency+' '+reservationInfo.orderSummary.totalPrice, '1': event.bankAccount}"></p>
+          <p class="bank-account-owner-info" *ngFor="let ownerLine of event.bankAccountOwner">{{ownerLine}}</p>
+          <p class="no-margin-bottom" [innerHtml]="'reservation-page-waiting.required-steps.1.with-bank-account-owner.2' | translate: {'0': paymentReason}"></p>
+      </li>
+      <li *ngIf="event.bankAccountOwner.length === 0"
+          [innerHtml]="'reservation-page-waiting.required-steps.1' | translate: {'0': event.currency+' '+reservationInfo.orderSummary.totalPrice, '1': event.bankAccount, '2': paymentReason}">
+      </li>
+      <li [innerHtml]="'reservation-page-waiting.required-steps.2' | translate: {'0': event.organizationEmail, '1': reservationInfo.id}"></li>
+      <li [innerHtml]="'reservation-page-waiting.required-steps.3' | translate"></li>
+  </ol>
+</div>
