#1 display expiration date in payment info

--- a/src/app/reservation/offline-payment/offline-payment.component.html
+++ b/src/app/reservation/offline-payment/offline-payment.component.html
@@ -1,4 +1,10 @@
 <div class="wMarginBottom wMarginTop center-block" *ngIf="event && reservationInfo">
+
+  <div class="alert alert-warning wMarginTop wMarginBottom">
+    <h2><fa-icon [icon]="['fa', 'exclamation-triangle']"></fa-icon>{{' '}}<span [innerHtml]="'reservation-page-waiting.title' | translate: {'0': reservationInfo.formattedExpirationDate[translate.currentLang]}"></span></h2>
+  </div>
+
+
   <h4 [innerHtml]="'reservation-page-waiting.required-steps'|translate"></h4>
   <ol>
       <li *ngIf="event.bankAccountOwner.length > 0">
