#1 additional work on offline-payment page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -83,6 +83,14 @@ label.col-form-label {
     margin-bottom: 20px;
 }
 
+.wMarginTop30px {
+    margin-top: 30px
+}
+
+.wMarginTop {
+    margin-top: 20px
+}
+
 .no-margin-bottom {
     margin-bottom: 0;
 }
