--- a/src/app/reservation/offline-payment/offline-payment.component.html
+++ b/src/app/reservation/offline-payment/offline-payment.component.html
@@ -24,6 +24,22 @@
     <h4 [innerHtml]="'reservation-page-waiting.questions' | translate: {'0': event.organizationEmail, '1': reservationInfo.id}"></h4>
   </div>
 
+  <div class="wMarginTop">
+      <div class="pull-left"><a [href]="event.websiteUrl" class="btn btn-outline-dark" translate="to-event-site"></a></div>
+      <!--{{#userCanDownloadReceiptOrInvoice}}
+      {{#reservation.hasInvoiceNumber}}
+          <div class="pull-right">
+              <a href="{{request.contextPath}}/event/{{event.shortName}}/reservation/{{reservationId}}/invoice" class="btn btn-success" target="_blank">{{#i18n}}reservation-page-complete.download-your-invoice{{/i18n}}</a>
+          </div>
+      {{/reservation.hasInvoiceNumber}}
+      {{/userCanDownloadReceiptOrInvoice}}
+      {{^userCanDownloadReceiptOrInvoice}}
+          <div class="pull-right">
+              {{#i18n}}reservation-page-waiting.invoice-will-be-sent{{/i18n}}
+          </div>
+      {{/userCanDownloadReceiptOrInvoice}}-->
+  </div>
+
 
   <div class="text-center wMarginTop30px">{{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}</div>
 </div>
