#1 display ticket.payment-required message

--- a/src/app/view-ticket/view-ticket.component.html
+++ b/src/app/view-ticket/view-ticket.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="event">
+<div *ngIf="event && ticketInfo">
   <app-event-header [event]="event"></app-event-header>
 
   <hr>
@@ -9,11 +9,11 @@
               <app-event-summary [event]="event"></app-event-summary>
           </div>
           <div class="col-5">
-              <img src="/api/v2/public/event/{{event.shortName}}/ticket/{{ticketIdentifier}}/code.png" class="img-responsive img-center">
+              <img src="/api/v2/public/event/{{event.shortName}}/ticket/{{ticketInfo.uuid}}/code.png" class="img-responsive img-center">
           </div>
       </div>
 
-      <div class="wMarginTop30px wMarginBottom30px" *ngIf="ticketInfo">
+      <div class="wMarginTop30px wMarginBottom30px">
           <h2 translate="ticket.ticket"></h2>
           <dl class="row">
               <dt class="col-sm-3 text-align-right" translate="ticket.holder"></dt>
@@ -27,9 +27,14 @@
           </dl>
       </div>
 
+
+      <div *ngIf="ticketInfo.deskPaymentRequired" class="text-center wMarginTop30px wMarginBottom30px">
+          <h3 translate="ticket.payment-required"></h3>
+      </div>
+
       <div class="row">
           <div class="col-md-4 offset-md-8 col-12">
-                <a [attr.href]="'/api/v2/public/event/' + event.shortName + '/ticket/' + ticketIdentifier + '/download-ticket'" class="btn btn-success btn-block">
+                <a [attr.href]="'/api/v2/public/event/' + event.shortName + '/ticket/' + ticketInfo.uuid + '/download-ticket'" class="btn btn-success btn-block">
                     <fa-icon [icon]="['fa', 'download']"></fa-icon>
                     {{'reservation-page-complete.download-ticket'|translate}}
                 </a>
