--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -50,30 +50,31 @@
     <div *ngIf="!reservationInfo.orderSummary.free">
       <div class="page-header wMarginTop"><h2 translate="reservation-page.payment"></h2></div>
 
-      <div *ngIf="event.activePaymentMethods.length > 1">
-          <div class="btn-group btn-group-toggle payment-method-selector wMarginBottom" ngbRadioGroup formControlName="paymentMethod">
-            <label ngbButtonLabel class="btn btn-outline-dark" *ngIf="event.activePaymentMethods.indexOf('ON_SITE') >= 0">
+      <div *ngIf="paymentMethodsCount(event) > 1">
+          <div class="btn-group btn-group-toggle payment-method-selector wMarginBottom" ngbRadioGroup formControlName="selectedPaymentMethod">
+            <label ngbButtonLabel class="btn btn-outline-dark" *ngIf="event.activePaymentMethods['ON_SITE']">
               <input ngbButton type="radio" [value]="'ON_SITE'"><fa-icon [icon]="['fas', 'money-bill']"></fa-icon> {{'reservation-page.on-site'|translate}}
             </label>
-            <label ngbButtonLabel class="btn btn-outline-dark" *ngIf="event.activePaymentMethods.indexOf('OFFLINE') >= 0">
-              <input ngbButton type="radio" [value]="'OFFLINE'"><fa-icon [icon]="['fas', 'exchange-alt']"></fa-icon> {{'reservation-page.offline'|translate}}
+            <label ngbButtonLabel class="btn btn-outline-dark" *ngIf="event.activePaymentMethods['BANK_TRANSFER']">
+              <input ngbButton type="radio" [value]="'BANK_TRANSFER'"><fa-icon [icon]="['fas', 'exchange-alt']"></fa-icon> {{'reservation-page.offline'|translate}}
             </label>
           </div>
       </div>
-      <div *ngIf="event.activePaymentMethods.length === 1">
-          <h4 class="wMarginTop" [ngSwitch]="event.activePaymentMethods[0]">
+      <div *ngIf="paymentMethodsCount(event) === 1">
+          <h4 class="wMarginTop" [ngSwitch]="getSinglePaymentMethod(event)">
             <span *ngSwitchCase="'ON_SITE'">
                 <fa-icon [icon]="['fas', 'money-bill']"></fa-icon> {{'reservation-page.on-site'|translate}}
             </span>
-            <span *ngSwitchCase="'OFFLINE'">
+            <span *ngSwitchCase="'BANK_TRANSFER'">
                 <fa-icon [icon]="['fas', 'exchange-alt']"></fa-icon> {{'reservation-page.offline'|translate}}
             </span>
           </h4>
       </div>
 
-      <div [ngSwitch]="overviewForm.value.paymentMethod">
+      <div [ngSwitch]="overviewForm.value.selectedPaymentMethod">
+        <!-- TODO, here, instead of a switch, we will simply declare all the payment proxy and we pass both the PAYMENT_METHOD and related PAYMENT_PROXY: if they correspond, they will be displayed-->
         <div *ngSwitchCase="'ON_SITE'">ON_SITE</div>
-        <div *ngSwitchCase="'OFFLINE'">OFFLINE</div>
+        <div *ngSwitchCase="'BANK_TRANSFER'">BANK_TRANSFER</div>
       </div>
     </div>
 
