#1 text for offline/onsite payment component

--- a/src/app/payment/offline-payment-proxy/offline-payment-proxy.component.html
+++ b/src/app/payment/offline-payment-proxy/offline-payment-proxy.component.html
@@ -1,3 +1,5 @@
-<div *ngIf="matchProxyAndMethod">
-  offline-payment-proxy works!
+<div *ngIf="matchProxyAndMethod" class="row wMarginBottom wMarginTop">
+    <div class="col-12">
+        <div class="text-muted">{{'reservation-page.offline.description'|translate: {'0': 'TODO'} }}</div>
+    </div>
 </div>
