--- a/src/app/payment/onsite-payment-proxy/onsite-payment-proxy.component.html
+++ b/src/app/payment/onsite-payment-proxy/onsite-payment-proxy.component.html
@@ -1,3 +1,5 @@
-<div *ngIf="matchProxyAndMethod">
-  onsite-payment-proxy works!
+<div *ngIf="matchProxyAndMethod" class="row wMarginBottom wMarginTop">
+    <div class="col-12">
+        <div class="text-muted" translate="reservation-page.on-site.description"></div>
+    </div>
 </div>
