--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -71,8 +71,10 @@
           </h4>
       </div>
 
-      <app-offline-payment-proxy [proxy]="overviewForm.value.paymentMethod" [method]="overviewForm.value.selectedPaymentMethod"></app-offline-payment-proxy>
-      <app-onsite-payment-proxy [proxy]="overviewForm.value.paymentMethod" [method]="overviewForm.value.selectedPaymentMethod"></app-onsite-payment-proxy>
+      <div *ngIf="event.activePaymentMethods[overviewForm.value.selectedPaymentMethod]" >
+          <app-offline-payment-proxy [proxy]="overviewForm.value.paymentMethod" [method]="overviewForm.value.selectedPaymentMethod" [parameters]="event.activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"></app-offline-payment-proxy>
+          <app-onsite-payment-proxy [proxy]="overviewForm.value.paymentMethod" [method]="overviewForm.value.selectedPaymentMethod" [parameters]="event.activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"></app-onsite-payment-proxy>
+      </div>
     </div>
 
     <div>
