#1 additional text works for paypal

--- a/src/app/payment/paypal-payment-proxy/paypal-payment-proxy.component.html
+++ b/src/app/payment/paypal-payment-proxy/paypal-payment-proxy.component.html
@@ -1,3 +1,7 @@
-<p>
-  paypal-payment-proxy works!
-</p>
+<div *ngIf="matchProxyAndMethod" class="row wMarginBottom wMarginTop">
+  <div class="col-12">
+      <div class="text-muted">
+        <div translate="reservation-page.paypal.description"></div>
+      </div>
+  </div>
+</div>
