--- a/src/app/payment/stripe-payment-proxy/stripe-payment-proxy.component.html
+++ b/src/app/payment/stripe-payment-proxy/stripe-payment-proxy.component.html
@@ -1,3 +1,5 @@
-<p>
-  stripe-payment-proxy works!
-</p>
+<div *ngIf="matchProxyAndMethod" class="row wMarginBottom wMarginTop">
+  <div class="col-12">
+      <div class="text-muted">STRIPE TODO</div>
+  </div>
+</div>
