--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -4,7 +4,7 @@
 
   <app-countdown [validity]="reservationInfo.validity" (onExpired)="handleExpired($event)"></app-countdown>
 
-  <form [formGroup]="overviewForm" (submit)="confirm(overviewForm.value)">
+  <form [formGroup]="overviewForm" (submit)="confirm()">
 
 
     <div class="page-header">
@@ -85,20 +85,18 @@
 
       <div *ngIf="event.activePaymentMethods[overviewForm.value.selectedPaymentMethod]" >
           <app-offline-payment-proxy 
-            [reservation]="reservationInfo"
             [proxy]="overviewForm.value.paymentMethod" 
             [method]="overviewForm.value.selectedPaymentMethod" 
             [parameters]="event.activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"
             (paymentProvider)="registerCurrentPaymentProvider($event)">
           </app-offline-payment-proxy>
           <app-onsite-payment-proxy 
-            [reservation]="reservationInfo"
             [proxy]="overviewForm.value.paymentMethod" 
             [method]="overviewForm.value.selectedPaymentMethod" 
-            [parameters]="event.activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"
             (paymentProvider)="registerCurrentPaymentProvider($event)">
           </app-onsite-payment-proxy>
           <app-stripe-payment-proxy 
+            [event]="event"
             [reservation]="reservationInfo"
             [proxy]="overviewForm.value.paymentMethod" 
             [method]="overviewForm.value.selectedPaymentMethod" 
@@ -106,10 +104,8 @@
             (paymentProvider)="registerCurrentPaymentProvider($event)">
           </app-stripe-payment-proxy>
           <app-paypal-payment-proxy 
-            [reservation]="reservationInfo"
             [proxy]="overviewForm.value.paymentMethod" 
             [method]="overviewForm.value.selectedPaymentMethod" 
-            [parameters]="event.activePaymentMethods[overviewForm.value.selectedPaymentMethod].parameters"
             (paymentProvider)="registerCurrentPaymentProvider($event)">
           </app-paypal-payment-proxy>
       </div>
