--- a/src/app/reservation/processing-payment/processing-payment.component.html
+++ b/src/app/reservation/processing-payment/processing-payment.component.html
@@ -2,6 +2,11 @@
 
   <app-stepper [currentStep]="3" [free]="event.free" [inProgress]="true"></app-stepper>
 
+  <div class="page-header">
+    <h2 translate="reservation-page.title"></h2>
+  </div>
+
+  <app-summary-table [event]="event" [reservationInfo]="reservationInfo"></app-summary-table>
 
   <div class="alert alert-info text-center">
     <h4><fa-icon [icon]="['fa', 'cog']" [spin]="true"></fa-icon>{{' '}}<span translate="reservation.payment-in-progress"></span></h4>
