--- a/src/app/event-summary/event-summary.component.html
+++ b/src/app/event-summary/event-summary.component.html
@@ -3,7 +3,27 @@
   <div>{{'show-event.by'|translate}} <strong>{{event.organizationName}}</strong> &lt;<a [href]="'mailto:'+ event.organizationEmail">{{event.organizationEmail}}</a>&gt;</div>
   <div>
     <ul class="list-unstyled">
-      <li><fa-icon [icon]="['far', 'calendar-alt']"></fa-icon></li>
+
+      <!-- same day-->
+      <li *ngIf="event.sameDay">
+        <fa-icon [icon]="['far', 'calendar-alt']"></fa-icon>
+        {{' ' + event.formattedBeginDate[translate.currentLang]}}
+      </li>
+      <li *ngIf="event.sameDay">
+        <fa-icon [icon]="['far', 'clock']"></fa-icon>
+        {{' ' + event.formattedBeginTime[translate.currentLang] + ' ' + event.formattedEndTime[translate.currentLang] }}
+      </li>
+      <!-- more than one day-->
+      <li *ngIf="!event.sameDay">
+          <fa-icon [icon]="['far', 'calendar-alt']"></fa-icon>
+          {{'event-days.not-same-day'|translate: {'0': event.formattedBeginDate[translate.currentLang], '1': event.formattedBeginTime[translate.currentLang]} }}
+          {{' - '}}
+          {{'event-days.not-same-day'|translate: {'0': event.formattedEndDate[translate.currentLang], '1': event.formattedEndTime[translate.currentLang]} }}
+          {{' '}}
+          <fa-icon [icon]="['fa', 'info-circle']" class="text-info" ngbTooltip="{{'show-event.timezone.warn' | translate:{'0': event.timeZone} }}"></fa-icon>
+      </li>
+
+
       <li>
         <fa-icon [icon]="['far', 'calendar-plus']"></fa-icon> {{'show-event.add-to-calendar' | translate}}
         <a title="{{'show-event.add-to-calendar' | translate}} google" target="_blank"
