support ticket category date override #1

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div [ngClass]="{'col-md-7': event.mapUrl, 'col-md-12': !event.mapUrl}">
-          <app-event-summary [event]="event"></app-event-summary>
+          <app-event-summary [event]="event" [dateValidityProvider]="event"></app-event-summary>
         </div>
         <div class="col-md-5" *ngIf="event.mapUrl"><img [src]="event.mapUrl" class="img-responsive"></div>
     </div>
