--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,6 +71,10 @@ label.col-form-label {
     height: auto;
 }
 
+.img-center {
+    margin:auto;
+}
+
 .table>thead:first-child>tr:first-child>th {
     border-top: 0;
 }
