--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -31,6 +31,11 @@
       </div>
     </div>
 
+    <!-- invoicing section -->
+    <div *ngIf="event.invoicingConfiguration.onlyInvoice"></div>
+    <div *ngIf="!reservationInfo.orderSummary.free && event.invoicingConfiguration.invoiceAllowed && !event.invoicingConfiguration.onlyInvoice"></div>
+    <!-- -->
+
 
     <div class="page-header">
       <h2 translate="reservation-page.attendees"></h2>
