#1 style: label inside form-group should be bold

--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -18,8 +18,10 @@
         </div>
       </div>
       <div class="col-12 col-sm-6">
-        <label for="last-name">{{'common.last-name'|translate}}{{' '}}*</label>
-        <input id="last-name" class="form-control" formControlName="lastName" type="text" autocomplete="lname" maxlength="255">
+        <div class="form-group">
+          <label for="last-name">{{'common.last-name'|translate}}{{' '}}*</label>
+          <input id="last-name" class="form-control" formControlName="lastName" type="text" autocomplete="lname" maxlength="255">
+        </div>
       </div>
     </div>
     <div class="row">
