--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -1,3 +1,22 @@
-<p>
-  invoice-form works!
-</p>
+<div class="page-header">
+    <h2 translate="reservation-page.invoice-details"></h2>
+</div>
+
+
+<div class="row" [formGroup]="form">
+  <div class="col-12">
+    <div class="form-group">
+      <label translate="invoice.type"></label>
+      <div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" formControlName="addCompanyBillingDetails" [value]="false" id="invoiceTypePrivate">
+            <label class="form-check-label radio-inline" for="invoiceTypePrivate">{{' '}}{{'invoice.type.private' | translate}}</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" formControlName="addCompanyBillingDetails" [value]="true" id="invoiceTypeBusiness">
+            <label class="form-check-label radio-inline" for="invoiceTypeBusiness">{{' '}}{{'invoice.type.business' | translate}}</label>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
